--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body{
     display: flex;
     padding-top: 64px;
     padding-bottom: 64px;
-    justify-content: space-between
+    justify-content: space-between;
     align-items: center;
 }
 .main_text{
